# serf

./: .cvsignore  .editorconfig  .gdbinit  BRANCH-README  CHANGES  CMakeLists.txt  Makefile  Makefile.in  NOTICE  README  README.branch  SConstruct  STATUS  buildconf  config.json  config.layout  config_store.c  configure.in  connection.c  connection_request.c  context.c  design-guide.txt  dist.sh  incoming.c  logging.c  outgoing.c  outgoing_request.c  pump.c  serf.h  serf.mak  serf.rc  serf_bucket_types.h  serf_bucket_util.h  serf_private.h  serfmake  ssltunnel.c
.github/workflows/: linux-cmake.yml  linux.yml  windows-cmake.yml
auth/: auth.c  auth.h  auth_basic.c  auth_digest.c  auth_kerb.c  auth_kerb.h  auth_kerb_gss.c  auth_kerb_sspi.c  auth_spnego.c  auth_spnego.h  auth_spnego_gss.c  auth_spnego_sspi.c  auth_sspi.c
base/: .cvsignore  Makefile.in  serf_connection.c  serf_filters.c  serf_open_url.c  serf_request.c
base/buckets/: Makefile.in  serf_bucket_authentication.c  serf_bucket_header.c  serf_bucket_request_line.c  serf_bucket_ssl.c  serf_bucket_status.c
base/filters/: Makefile.in  serf_filter_deflate.c  serf_filter_http.c  serf_filter_socket.c  serf_filter_ssl.c
bindings/python/examples/: sget.py
bindings/python_ctypes/examples/: sget.py
bindings/python_ctypes/serf/: __init__.py
buckets/: aggregate_buckets.c  allocator.c  barrier_buckets.c  brotli_buckets.c  bucket_private.h  buckets.c  bwtp_buckets.c  chunk_buckets.c  copy_bucket.c  copy_buckets.c  dechunk_buckets.c  deflate_buckets.c  event_buckets.c  fcgi_buckets.c  file_buckets.c  headers_buckets.c  hpack_buckets.c  hpack_huffman.inc  hpack_huffman.py  http2_frame_buckets.c  httpconn_buckets.c  iovec_buckets.c  limit_buckets.c  log_wrapper_buckets.c  macosxssl_buckets.c  macosxssl_helper.m  macosxssl_x509_cert.c  mmap_buckets.c  openssl_buckets.c  prefix_buckets.c  request_buckets.c  response_body_buckets.c  response_buckets.c  sectrans_buckets.c  sectrans_helper.m  sectrans_x509_cert.c  securetransport_buckets.c  serf-buckets.natvis  simple_buckets.c  socket_buckets.c  (+2 more)
docs/: notes-filter-chains.txt  pool-design.txt  processing.txt  roadmap.txt
include/: .cvsignore  serf.h  serf_auto_config.h.in  serf_buckets.h  serf_config.h.in  serf_declare.h  serf_filters.h  serf_methods.h  serf_version.h
protocols/: fcgi_buckets.h  fcgi_protocol.c  fcgi_protocol.h  fcgi_stream.c  http2_buckets.h  http2_protocol.c  http2_protocol.h  http2_stream.c
publish/: .htaccess  contribute.html  doap.rdf  download.html  index.html
publish/css/: bootstrap-theme.css  bootstrap-theme.min.css  bootstrap.css  bootstrap.min.css
publish/includes/: footer.html  header.html  navbar.html
publish/js/: bootstrap.js  bootstrap.min.js
src/: config_store.c  context.c  deprecated.c  logging.c  outgoing.c  outgoing_request.c  pump.c
test/: .cvsignore  CMakeLists.txt  CuTest-README.txt  CuTest.c  CuTest.h  Makefile.in  certificates.pem  mock_buckets.c  mock_sock_buckets.c  serf_bwtp.c  serf_file.c  serf_get.c  serf_httpd.c  serf_request.c  serf_response.c  serf_server.c  serf_spider.c  test_all.c  test_auth.c  test_buckets.c  test_context.c  test_internal.c  test_serf.h  test_server.c  test_ssl.c  test_util.c
test/MockHTTPinC/: MockHTTP.c  MockHTTP.h  MockHTTP_private.h  MockHTTP_server.c  MockHTTPinC_README.md
test/certs/: cacert_nul.pem  create_certs.py  serfcacert.pem  serfclientcert.p12  serfclientcert.pem  serfocspresponder.pem  serfrootcacert.pem  serfserver_expired_cert.pem  serfserver_future_cert.pem  serfserver_san_nocn_cert.pem  serfserver_san_ocsp_cert.pem  serfservercert.pem  serfservercrl.pem  servercert_cn_nul.key  servercert_cn_nul.pem  servercert_cnsan_nul.key  servercert_cnsan_nul.pem  servercert_san_nul.key  servercert_san_nul.pem
test/certs/private/: serfcakey.pem  serfclientkey.pem  serfrootcakey.pem  serfserverkey.pem
test/server/: serfcacert.pem  serfclientcert.p12  serfrootcacert.pem  serfserver_expired_cert.pem  serfserver_future_cert.pem  serfservercert.pem  serfserverkey.pem  test_server.c  test_server.h  test_sslserver.c
test/testcases/: chunked.response
